Доработка тестов, конфигурации тестов